--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,15 @@
   h4 {
     @apply text-slate-950;
   }
+  h2 {
+    @apply text-5xl/snug font-semibold pt-20;
+  }
+  h3 {
+    @apply text-3xl font-medium mx-10;
+  }
+  h4 {
+    @apply text-2xl mx-20;
+  }
 }
 
 @layer components {
