WIP: style projects section

--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@
   }
 
   #projects article {
-    @apply grid w-[505px] justify-items-center rounded-lg bg-slate-500 text-white pb-2;
+    @apply grid w-[505px] rounded-lg bg-slate-500 text-white pb-2;
     box-shadow:
       inset 0 4px 8px rgba(255, 255, 255, 0.2),
       inset 0 -4px 8px rgba(0, 0, 0, 0.5);
@@ -76,6 +76,10 @@
   }
   #projects article > img {
     @apply rounded-t-lg;
+  }
+
+  #projects article > div:last-child {
+    @apply flex p-5 justify-between;
   }
 
   .white-icon {
@@ -91,6 +95,10 @@
   #projects h3,
   #skills h3 {
     @apply m-5 w-[200px] rounded-tl-lg border-t-[6px] border-l-[6px] border-slate-500 py-3 pl-5 whitespace-nowrap;
+  }
+
+  .project-tools {
+    @apply p-5 flex flex-wrap gap-5;
   }
 }
 
