--- a/src/styles.css
+++ b/src/styles.css
@@ -18,13 +18,13 @@
     @apply text-slate-950;
   }
   h2 {
-    @apply pt-20 text-5xl/snug font-semibold;
+    @apply pt-20 lg:text-5xl/snug text-2xl/snug font-semibold;
   }
   h3 {
-    @apply text-3xl font-medium;
+    @apply lg:text-3xl text-xl font-medium;
   }
   h4 {
-    @apply mx-5 mt-6 justify-self-stretch border-l-3 py-1 pl-5 text-2xl text-white;
+    @apply mx-5 mt-6 justify-self-stretch border-l-3 py-1 pl-5 lg:text-2xl text-lg text-white;
   }
 
   iframe {
@@ -35,15 +35,15 @@
     @apply flex flex-col items-center;
   }
   figure > img {
-    @apply w-[100px];
+    @apply lg:w-[100px] w-[50px];
   }
 
   figcaption {
-    @apply text-center text-slate-500;
+    @apply text-center text-slate-500 text-xs lg:text-base;
   }
 
   address {
-    @apply my-5 grid grid-cols-[repeat(auto-fill,minmax(150px,1fr))] gap-y-5 text-lg not-italic;
+    @apply mx-3 lg:mx-0 my-5 grid grid-cols-[repeat(auto-fill,minmax(150px,1fr))] gap-y-5 text-lg not-italic;
   }
 
   address a {
@@ -90,7 +90,7 @@
   #projects,
   #skills,
   #contact {
-    @apply px-[10px] lg:px-[100px];
+    @apply px-[8px] lg:px-[100px];
   }
 
   #projects article {
@@ -100,28 +100,43 @@
       inset 0 -2px 5px rgba(0, 0, 0, 0.5);
   }
   #projects > div {
-    @apply mx-3 grid lg:grid-cols-[repeat(auto-fit,minmax(550px,1fr))] grid-cols-[repeat(auto-fit,minmax(320px,1fr))] justify-items-center gap-y-10;
+    @apply lg:mx-3 mx-1 grid lg:grid-cols-[repeat(auto-fit,minmax(550px,1fr))] grid-cols-[repeat(auto-fit,minmax(320px,1fr))] justify-items-center gap-y-10;
   }
   #projects article > img {
     @apply rounded-t-lg;
   }
 
   #projects article > p {
-    @apply px-5 py-2;
+    @apply px-5 py-2 text-sm lg:text-base;
   }
 
   #projects article > div:last-child {
-    @apply mx-4 flex border-t-2 py-5 text-2xl;
+    @apply lg:mx-4 mx-2 flex border-t-2 py-5 lg:text-xl text-lg;
   }
   #projects article > div:last-child > * {
-    @apply mx-6 flex-1 bg-white/25 text-center;
-    padding: 10px 0;
+    @apply lg:mx-10 mx-2 flex-1 bg-white/25 text-center lg:py-1.5 py-1;
     backdrop-filter: blur(10px);
     border-radius: 5px;
     box-shadow:
       inset 0 2px 5px rgba(255, 255, 255, 0.5),
       inset 0 -2px 5px rgba(0, 0, 0, 0.5);
   }
+
+  .video-wrapper {
+  position: relative;
+  width: 100%;
+  padding-top: 62.5%; /* 9 / 16 = 0.5625 */
+  overflow: hidden;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* border: 0; */
+}
 
   .white-icon {
     filter: brightness(0) invert(1);
@@ -130,7 +145,7 @@
 
   .big-icon {
     filter: brightness(0) invert(1);
-    @apply inline-block w-[30px];
+    @apply inline-block lg:w-[30px] w-[25px];
   }
 
   #projects > h2,
@@ -140,11 +155,11 @@
 
   #projects h3,
   #skills h3 {
-    @apply m-5 w-[200px] rounded-tl-lg border-t-[6px] border-l-[6px] border-slate-500 py-3 pl-5 whitespace-nowrap;
+    @apply m-5 w-[200px] rounded-tl-lg border-t-[6px] border-l-[6px] border-slate-500 py-3 lg:pl-5 pl-2 whitespace-nowrap;
   }
 
   .project-tools {
-    @apply flex flex-wrap gap-5 px-5 py-3 text-lg;
+    @apply flex flex-wrap lg:gap-5 gap-x-3 gap-y-1 px-5 lg:pb-3 pb-2 lg:text-lg text-base;
   }
 
   .center-icon {
@@ -152,7 +167,7 @@
   }
 
   #skills > div {
-    @apply mx-20 grid grid-cols-[repeat(auto-fill,minmax(150px,1fr))] justify-items-center gap-y-10;
+    @apply lg:mx-20 mx-5 grid lg:grid-cols-[repeat(auto-fill,minmax(150px,1fr))] grid-cols-[repeat(auto-fill,minmax(80px,1fr))] justify-items-center lg:gap-y-10 gap-y-5;
   }
 }
 
