--- a/src/styles.css
+++ b/src/styles.css
@@ -159,7 +159,7 @@
   }
 
   .project-tools {
-    @apply flex flex-wrap lg:gap-5 gap-x-3 gap-y-1 px-5 lg:pb-3 pb-2 lg:text-lg text-base;
+    @apply flex flex-wrap lg:gap-x-5 lg:gap-y-1 gap-x-3 gap-y-1 px-5 lg:pb-3 pb-2 lg:text-lg text-base;
   }
 
   .center-icon {
